@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #19099: The struct module now supports Unicode format strings.
+
 - Issue #19878: Fix segfault in bz2 module after calling __init__ twice with
   non-existent filename. Initial patch by Vajrasky Kok.
 
